--- a/news.html
+++ b/news.html
@@ -30,7 +30,7 @@
     <span style="font-size:30px; border-radius: 50px; border: 3px solid red; padding: 10px; margin-top: 20px;" > Ресторан Сытый медвежонок Миша поздравляет всех наших любимых Женщин с праздником!</span>
     <br><span style="font-size:20px;"> И дарит вам бесплатный торт "Цветочек Восьмого Марта!" от нашего шеф-повара Давыдова Михаила! Закажите его через Телеграмм!</span>
         <img src="https://lh3.googleusercontent.com/pw/AP1GczPt6CUJbQ3gHGir4YiW8ZbxmS79nMDWpIvhg2_-F_NkN2wuOEp8d-735j5rP0pd5PTPCy3Wp9nHLw1L1bTr-ZQIkTPJkC67KFx6bEHW8_ewGVxggiI=w2400">
-        <img src="">
+        <img src="https://lh3.googleusercontent.com/pw/AP1GczPPnI6VlTO3Axbs9GxwsjOsMWwr9qJCITquL8ahoOKxKAOUFgyPQnnnNm7s_J-utJ4cktsBTE7wJdVJzjpuV41zMl7DH9ZnNDuO46w9E-a2FrDpYK8=w2400">
         <img src="">
         
 </main>
