--- a/news.html
+++ b/news.html
@@ -31,7 +31,7 @@
     <br><span style="font-size:20px;"> И дарит вам бесплатный торт "Цветочек Восьмого Марта!" от нашего шеф-повара Давыдова Михаила! Закажите его через Телеграмм!</span>
         <img src="https://lh3.googleusercontent.com/pw/AP1GczPt6CUJbQ3gHGir4YiW8ZbxmS79nMDWpIvhg2_-F_NkN2wuOEp8d-735j5rP0pd5PTPCy3Wp9nHLw1L1bTr-ZQIkTPJkC67KFx6bEHW8_ewGVxggiI=w2400">
         <img src="https://lh3.googleusercontent.com/pw/AP1GczPPnI6VlTO3Axbs9GxwsjOsMWwr9qJCITquL8ahoOKxKAOUFgyPQnnnNm7s_J-utJ4cktsBTE7wJdVJzjpuV41zMl7DH9ZnNDuO46w9E-a2FrDpYK8=w2400">
-        <img src="">
+        <img src="https://lh3.googleusercontent.com/pw/AP1GczMDQ5kSA7fN4eBPfAUKKXSKbq-ts_cIWZ7WCvta1PXYgJYsKYs1KAkq_evvz7FZA32_BkqHTZ8X-V78zDjH5oy84mOYG9Sa9s5vf3yCcLwX2dbQgz8=w2400">
         
 </main>
     <script src="news.js"></script>
