--- a/news.html
+++ b/news.html
@@ -24,15 +24,15 @@
         <a href="menu/menu.html">Меню</a>
         <a href="assistent/assistent.html">Чат-бот</a>  
     </section>
-    
-    <main style="font-size: 40px; color: red; text-align: center; z-index: -300;">
+    <main>
     С 8 Марта!<br>
-    <span style="font-size:30px; padding: 10px; margin-top: 20px;" > Ресторан Сытый медвежонок Миша поздравляет всех наших любимых Женщин с праздником!</span>
+    <span class="span" > Ресторан Сытый медвежонок Миша поздравляет всех наших любимых Женщин с праздником!</span>
     <br><span style="font-size:20px;"> И дарит вам бесплатный торт "Цветочек Восьмого Марта!" от нашего шеф-повара Давыдова Михаила! Закажите его через Телеграмм!</span>
-        <img src="https://lh3.googleusercontent.com/pw/AP1GczPt6CUJbQ3gHGir4YiW8ZbxmS79nMDWpIvhg2_-F_NkN2wuOEp8d-735j5rP0pd5PTPCy3Wp9nHLw1L1bTr-ZQIkTPJkC67KFx6bEHW8_ewGVxggiI=w2400" width: 300px; height:200px;>
-        <img src="https://lh3.googleusercontent.com/pw/AP1GczPPnI6VlTO3Axbs9GxwsjOsMWwr9qJCITquL8ahoOKxKAOUFgyPQnnnNm7s_J-utJ4cktsBTE7wJdVJzjpuV41zMl7DH9ZnNDuO46w9E-a2FrDpYK8=w2400" width: 300px; height:200px;>
-        <img src="https://lh3.googleusercontent.com/pw/AP1GczMDQ5kSA7fN4eBPfAUKKXSKbq-ts_cIWZ7WCvta1PXYgJYsKYs1KAkq_evvz7FZA32_BkqHTZ8X-V78zDjH5oy84mOYG9Sa9s5vf3yCcLwX2dbQgz8=w2400" width: 300px; height:200px;>
-        
+        <div class="image">
+            <img src="https://lh3.googleusercontent.com/pw/AP1GczPt6CUJbQ3gHGir4YiW8ZbxmS79nMDWpIvhg2_-F_NkN2wuOEp8d-735j5rP0pd5PTPCy3Wp9nHLw1L1bTr-ZQIkTPJkC67KFx6bEHW8_ewGVxggiI=w2400" class="photo">
+            <img src="https://lh3.googleusercontent.com/pw/AP1GczPPnI6VlTO3Axbs9GxwsjOsMWwr9qJCITquL8ahoOKxKAOUFgyPQnnnNm7s_J-utJ4cktsBTE7wJdVJzjpuV41zMl7DH9ZnNDuO46w9E-a2FrDpYK8=w2400" class="photo">
+            <img src="https://lh3.googleusercontent.com/pw/AP1GczMDQ5kSA7fN4eBPfAUKKXSKbq-ts_cIWZ7WCvta1PXYgJYsKYs1KAkq_evvz7FZA32_BkqHTZ8X-V78zDjH5oy84mOYG9Sa9s5vf3yCcLwX2dbQgz8=w2400" class="photo">
+        </div>
 </main>
     <script src="news.js"></script>
 </body>
