--- a/assistent/assistent.html
+++ b/assistent/assistent.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="assistent.css"/>
 </head>
 <body>
+    <div class="technical_problems_window">
+        <img src="https://lh3.googleusercontent.com/pw/AP1GczPVX82JjdLckexj7YtQJA97HcFGfJA5uYdC8l-bMZPDVKkDKc4p5veIUFJaOsrPoVqszfxqveDgiVCYwe3utNDFajFY0YOxFYWVO8OorRpu6W8RORw=w2400" height="300" weight="300" style="float: left;border-radius: 2em 0em 0em 2em;">
+        <div class="text_techical_problem">
+            Наш сайт <b>временно недоступен</b> по техническим причинам. Наш прекрасный разработчик "медвежонок Миша" уже почти всё починил!
+            Не волнуйтесь! Мы работаем над сайтом, чтобы сделать его ещё лучше!
+        </div>
+    </div>
     <header>
         Чат-бот <br>
         <button class="navigation_button" id="path_to_main">На главную</button> <button class="navigation_button" id="path_to_menu">В меню</button> <br>
