--- a/menu/menu.html
+++ b/menu/menu.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     <header>
-        Наши меню
+        <h1>Наши меню</h1>
+        <nav> 
+            <a href="../index.html">Главная</a>  
+            <a href="../order/order.html">Заказ</a>  
+        </nav>
     </header>
     <main>
         <section class="group_menu">
