--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
@@ -29,17 +28,17 @@
 
          <!-- Панель навигации по сайту -->
          <section class="panel_navigate_restaurant">
-            <button class="menu button_main_navigation" onclick="window.location = 'menu/menu.html' ">Меню <img src="" alt="Меню" class="image_menu"></button>       <button class="table button_main_navigation">Забронировать столик</button>              <button class="order button_main_navigation" onclick="window.location = 'order/order.html' ">Оформить заказ</button>
-            <section class="panel_additional_navigation">
-                <article>
-                    <button class="button_additional_navigation" onclick="location.href='#section2'">История ресторана</button> <button  class="button_additional_navigation"  onclick="window.location='news.html'">Новости и мероприятия</button>
-                </article>
-                <article>
-                    <button  class="button_additional_navigation" onclick="window.location='assistent/assistent.html'">ИИ ресторана</button>  <button class="button_additional_navigation" onclick= "window.location.href='https://t.me/+zl6ldTn6M_44ZDQy'">Телеграмм-канал</button> 
-                </article>
-            </section>
+            <button class="menu button_main_navigation" onclick="window.location = 'menu/menu.html' ">Наше вкусное меню <img src="" alt="Меню" class="image_menu"></button>       <button class="table button_main_navigation">Забронировать столик</button>              <button class="order button_main_navigation" onclick="window.location = 'order/order.html' ">Оформить заказ</button>
          </section>
         </header>
+        <section class="panel_additional_navigation">
+            <article>
+                <button class="button_additional_navigation" onclick="location.href='#section2'">История ресторана</button> <button  class="button_additional_navigation"  onclick="window.location='news.html'">Новости и мероприятия</button>
+            </article>
+            <article>
+                <button  class="button_additional_navigation" onclick="window.location='assistent/assistent.html'">ИИ ресторана</button>  <button class="button_additional_navigation" onclick= "window.location.href='https://t.me/+zl6ldTn6M_44ZDQy'">Телеграмм-канал</button> 
+            </article>
+        </section>
     </section>
 <main>
     <figure>
@@ -96,50 +95,4 @@
    <script src="main.js"></script> 
 </body>
 </html>
-<main>
-    <br> <br> <br> <br> <br> <br> <br>  <br> <br> <br>
-    <article class="image">
-        <img src="https://lh3.googleusercontent.com/pw/AP1GczMUK5tw3FtfVf0PLrXGRMkK0c1qfb6nWh5UFg80YC6B0XCQ8gBnM1Sh6d-XmfW287jOkQ7BsrPScLyO6X_ye7wqiOu_YikseV7tmxQ5vDiBlwgOXmQ=w2400" height="300" weight="300" style="text-align: center;";>
-    </article>
-    
-    <div class="welcome">
-        <h2>
-            Здравствуйте, уважаемые посетители, мы приветствуем вас на сайте ресторана "сытый медвежонок Миша."У нас есть горячие блюда, освежающие напитки, сладости и деликатесы!
-            И всё это вы можете заказать онлайн!
-        </h2>
-        <h3>
-            Это наш личный сайт ресторана. Здесь вы можете забронировать столик, оформить онлайн-заказ и узнать о нашем ресторане.
-        </h3>
-    </div>
-        <article class="birthday_block">
-            <h2>🎈🎉А также у нас в ресторане отмечают дни рождения🎈🎉</h2>
-            <img src="https://lh3.googleusercontent.com/pw/AP1GczP8NnQe4NNbLkPQ1Q2jpxe7mXnU5A51p8wEanLJIu-Hv35zv4xBfutro-66Csqf924XNf0Qq4U-nFH9GJ89snCDPSPwBO_VY8pRLvBr2tCYtAWJmyQ=w2400" alt="День Рождение" width="400" height="500">
-        </article>
-
-    <section>
-        <article id="section2" class="history">
-            <h1>Наша история</h1>
-            <h3>Cначала у нас существовал ресторан Русь, но потом из-за нарушение авторских прав наш ресторан был вынужден переименоваться! Теперь он стал рестораном сытый медвежонок Миша! Также наш ресторан постоянно развивается, сейчас у нас появился сайт нашего ресторана!
-            О акциях и мероприятиях вы можете узнать в телеграмм - канале "сытый медвежонок Миша". Вот ссылка: <a href="https://t.me/+zl6ldTn6M_44ZDQy">Сытый медвежонок Миша</a></h3>
-        </article>
-        <article class="rights">
-            <h1> Здравствуйте, уважаемые посетители!</h1>
-            Мы приветствуем вас в ресторане "Сытый медвежонок Миша"! И просим вас соблюдать наши <a href="https://docs.google.com/document/d/1KTeQ9MUdaHzrMHLcR0RgTf7zCbaTBKBKareX8yc_Fog/edit?usp=drivesdk">права ресторана!</a>
-            Любое нарушение прав нашего ресторана, влечет за собой административную и уголовную ответственность в соответствии со статьей 1515 ГК РФ!
-        </article>
-    </section>
-    <footer>
-        <h3>
-            ©2025 Сытый медвежонок Миша.
-            Все права защищены! 
-            <a href="https://docs.google.com/document/d/1KTeQ9MUdaHzrMHLcR0RgTf7zCbaTBKBKareX8yc_Fog/edit?usp=drivesdk"> Узнать подробнее...</a>
-        </h3>
-        <a href="https://t.me/+zl6ldTn6M_44ZDQy" target="_blank" class="Telegram_channel">Телеграмм-канал</a>
-        <a href="tel:+79251847978"  class="Telegram_channel">Позвонить нам</a>
-        <a href="tel:+79251847978"  class="Telegram_channel">Позвонить по номеру доставки</a>
-       <h1>Наш адрес:</h1> <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1003.9728113957084!2d18.846508330847403!3d42.296744414214594!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x134dd3cf2633c1e1%3A0xa7da7266861ec19e!2sFrizer%20Daco!5e0!3m2!1sru!2s!4v1736541649237!5m2!1sru!2s" width="400" height="150" style="border:0; " allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </footer>
-</main>
-   <script src="main.js"></script> 
-</body>
-</html>
+  
