--- a/news.html
+++ b/news.html
@@ -28,17 +28,19 @@
         <img src="https://lh3.googleusercontent.com/pw/AP1GczMUK5tw3FtfVf0PLrXGRMkK0c1qfb6nWh5UFg80YC6B0XCQ8gBnM1Sh6d-XmfW287jOkQ7BsrPScLyO6X_ye7wqiOu_YikseV7tmxQ5vDiBlwgOXmQ=w2400" height="300" weight="300" style="float: center;">
     </figure> -->
     <main>
-        <div class="content_of_topics" id="container_topics">
-            <button id="button_contents">Содержание &#9776;</button>
-            <div id="content">
-                <a href="">События</a>
-                <a href="">Праздники</a>
-                <a href="">Акции и скидки</a>  
-                <a href="">Новинки в меню</a>
-                <a href="">О нашем ресторане</a>
+        <section class="section_topics">
+            lfvb hldfbhbvjhbdfhbvfb  dh  ldh d h
+            <div class="content_of_topics" id="container_topics">
+                <button id="button_contents">Содержание &#9776;</button>
+                <div id="content">
+                    <a href="">События</a>
+                    <a href="">Праздники</a>
+                    <a href="">Акции и скидки</a>
+                    <a href="">Новинки в меню</a>
+                    <a href="">О нашем ресторане</a>
+                </div>
             </div>
-        </div>
-
+        </section>
         <section class="container_news">
             <article>
                 <img src="https://lh3.googleusercontent.com/pw/AP1GczNiVICdd6qaGdP7oaSvas-5g79mR4EfbDfaMixpZd_3rGoNbULIJJyJI6SKQh1StdkpHxWqQOFytc2AuCz4LFGjn3t5nEadZeJl0TztICmCmnB1sKE=w2400">
@@ -85,3 +87,4 @@
     <script src="news.js"></script>
 </body>
 </html>
+
