--- a/menu/menu.html
+++ b/menu/menu.html
@@ -32,6 +32,10 @@
                 <img src="https://avatars.mds.yandex.net/i?id=a13f89d5b744a59a445465f87b929da3_l-10023438-images-thumbs&n=13" alt="Картинка блюда" height="100px" style="border-radius: 5px; margin-top: 10px; border: 1px solid red;"><br>
                 <span>Детское меню</span>
             </article>
+            <article class="window_menu" id="group_menu_confectionery">
+                <img src="https://avatars.mds.yandex.net/i?id=f88009d7b9d7eccb121c4181cc8a2552_l-5258253-images-thumbs&n=13" alt="Картинка блюда" height="100px" style="border-radius: 5px; margin-top: 10px; border: 1px solid red;"><br>
+                <span>Меню сладостей</span>
+            </article>
         </section>
     </main>
     <script src="menu.js"></script>
