--- a/breakfast/breakfast.html
+++ b/breakfast/breakfast.html
@@ -45,7 +45,18 @@
 </section>
 
 <main>
-
+<article>
+    <img src="https://art-lunch.ru/content/uploads/2014/02/Eggs_Benedict-600x366.jpg" alt="">
+    Яйца Бенедикт
+    <button>В корзину</button>
+    <button>Подробнее о блюде</button>
+</article>
+<article>
+    <img src="https://art-lunch.ru/content/uploads/2014/02/Eggs_Benedict-600x366.jpg" alt="">
+    <span>Яйца Бенедикт</span>
+    <button>В корзину</button>
+    <button>Подробнее о блюде</button>
+</article>
 </main>
 
 <footer>
