--- a/breakfast/breakfast.html
+++ b/breakfast/breakfast.html
@@ -9,7 +9,7 @@
 <body>
 <header>
     <h2>Завтраки</h2>
-    <button class="menu_button">&#9776 Меню</button>
+    <button class="menu_button">&#9776; Меню</button>
     <nav>
         <a href="../order/order.html" title="Мой заказ">Мой заказ</a>
         <a href="../index.html" title="Главная страница">Главная</a>
@@ -46,16 +46,31 @@
 
 <main>
 <article>
-    <img src="https://art-lunch.ru/content/uploads/2014/02/Eggs_Benedict-600x366.jpg" alt="">
-    Яйца Бенедикт
-    <button>В корзину</button>
-    <button>Подробнее о блюде</button>
+    <span class="title_product">Яйца Бенедикт</span>
+    <img src="https://art-lunch.ru/content/uploads/2014/02/Eggs_Benedict-600x366.jpg" alt="" class="image_tovar">
+    <span class="description_product"></span><br>
+    <div style="text-align: right; margin-top: 50px;">
+    <button id="order_button">В заказ</button><br>
+    <button id="description_button">Подробнее о блюде</button>
+    </div>
 </article>
 <article>
-    <img src="https://art-lunch.ru/content/uploads/2014/02/Eggs_Benedict-600x366.jpg" alt="">
-    <span>Яйца Бенедикт</span>
-    <button>В корзину</button>
-    <button>Подробнее о блюде</button>
+    <span class="title_product">Оладьи</span>
+    <img src="" alt="" class="image_tovar">
+    <span class="description_product"></span><br>
+    <div style="text-align: right; margin-top: 50px;">
+    <button id="order_button">В заказ</button><br>
+    <button id="description_button">Подробнее о блюде</button>
+    </div>
+</article>
+<article>
+    <span class="title_product">Блины</span>
+    <img src="" alt="" class="image_tovar">
+    <span class="description_product"></span><br>
+    <div style="text-align: right; margin-top: 50px;">
+    <button id="order_button">В заказ</button><br>
+    <button id="description_button">Подробнее о блюде</button>
+    </div>
 </article>
 </main>
 
