--- a/hotproduct/hotproduct.html
+++ b/hotproduct/hotproduct.html
@@ -45,10 +45,24 @@
 </section>
 
 <main>
-<ol>
-    <li>Шашлык</li>
-    <li>Блюдо от шеф-повара</li>
-</ol>
+    <article>
+        <span class="title_product">Куриная грудка со сметаной</span>
+        <img src="" alt="" class="image_tovar">
+        <span class="description_product"></span><br>
+        <div style="text-align: right; margin-top: 50px;">
+        <button id="order_button">В заказ</button><br>
+        <button id="description_button">Подробнее о блюде</button>
+        </div>
+    </article>
+    <article>
+        <span class="title_product">Свинная корейка</span>
+        <img src="" alt="" class="image_tovar">
+        <span class="description_product"></span><br>
+        <div style="text-align: right; margin-top: 50px;">
+        <button id="order_button">В заказ</button><br>
+        <button id="description_button">Подробнее о блюде</button>
+        </div>
+    </article>
 </main>
 
 <footer>
