--- a/garnish/garnish.html
+++ b/garnish/garnish.html
@@ -45,7 +45,15 @@
 </section>
 
 <main>
-
+    <article>
+        <span class="title_product">Картофель с укропом</span>
+        <img src="" alt="" class="image_tovar">
+        <span class="description_product"></span><br>
+        <div style="text-align: right; margin-top: 50px;">
+        <button id="order_button">В заказ</button><br>
+        <button id="description_button">Подробнее о блюде</button>
+        </div>
+    </article>
 </main>
 
 <footer>
