--- a/salad/salad.html
+++ b/salad/salad.html
@@ -45,7 +45,24 @@
 </section>
 
 <main>
-
+    <article>
+        <span class="title_product">Свежий салат</span>
+        <img src="" alt="" class="image_tovar">
+        <span class="description_product"></span><br>
+        <div style="text-align: right; margin-top: 50px;">
+        <button id="order_button">В заказ</button><br>
+        <button id="description_button">Подробнее о блюде</button>
+        </div>
+    </article>
+    <article>
+        <span class="title_product">Греческий салат</span>
+        <img src="https://art-lunch.ru/content/uploads/2018/07/Greek_salad-600x366.jpg" alt="" class="image_tovar">
+        <span class="description_product"></span><br>
+        <div style="text-align: right; margin-top: 50px;">
+        <button id="order_button">В заказ</button><br>
+        <button id="description_button">Подробнее о блюде</button>
+        </div>
+    </article>
 </main>
 
 <footer>
