--- a/soup/soup.html
+++ b/soup/soup.html
@@ -45,7 +45,24 @@
 </section>
 
 <main>
-
+    <article>
+        <span class="title_product">Суп с тефтельками</span>
+        <img src="https://art-lunch.ru/content/uploads/2018/01/Soup_with_meatballs_000-600x366.jpg" alt="" class="image_tovar">
+        <span class="description_product"></span><br>
+        <div style="text-align: right; margin-top: 50px;">
+        <button id="order_button">В заказ</button><br>
+        <button id="description_button">Подробнее о блюде</button>
+        </div>
+    </article>
+    <article>
+        <span class="title_product">Куриный крем-суп</span>
+        <img src="https://art-lunch.ru/content/uploads/2018/12/chicken_cream_soup_000.jpg" alt="" class="image_tovar">
+        <span class="description_product"></span><br>
+        <div style="text-align: right; margin-top: 50px;">
+        <button id="order_button">В заказ</button><br>
+        <button id="description_button">Подробнее о блюде</button>
+        </div>
+    </article>
 </main>
 
 <footer>
