--- a/desert/desert.html
+++ b/desert/desert.html
@@ -45,7 +45,15 @@
 </section>
 
 <main>
-
+    <article>
+        <span class="title_product">Фруктовый салат</span>
+        <img src="https://art-lunch.ru/content/uploads/2021/12/fruktovyi-salat-000.jpg" alt="" class="image_tovar">
+        <span class="description_product"></span><br>
+        <div style="text-align: right; margin-top: 50px;">
+        <button id="order_button">В заказ</button><br>
+        <button id="description_button">Подробнее о блюде</button>
+        </div>
+    </article>
 </main>
 
 <footer>
