--- a/bakery/bakeryproducts.html
+++ b/bakery/bakeryproducts.html
@@ -45,7 +45,24 @@
 </section>
 
 <main>
-
+    <article>
+        <span class="title_product">Творожный кулич без дрожжей</span>
+        <img src="https://art-lunch.ru/content/uploads/2021/06/tvorozhniy-kulich-bez-drozhzhey-001.jpg" alt="" class="image_tovar">
+        <span class="description_product"></span><br>
+        <div style="text-align: right; margin-top: 50px;">
+        <button id="order_button">В заказ</button><br>
+        <button id="description_button">Подробнее о блюде</button>
+        </div>
+    </article>
+    <article>
+        <span class="title_product">Печенье Тающие моменты</span>
+        <img src="https://art-lunch.ru/content/uploads/2021/03/pechene-tayushhie-momenty-000.jpg" alt="" class="image_tovar">
+        <span class="description_product"></span><br>
+        <div style="text-align: right; margin-top: 50px;">
+        <button id="order_button">В заказ</button><br>
+        <button id="description_button">Подробнее о блюде</button>
+        </div>
+    </article>
 </main>
 
 <footer>
