--- a/drink/drink.html
+++ b/drink/drink.html
@@ -45,7 +45,33 @@
 </section>
 
 <main>
-
+    <article>
+        <span class="title_product">Имбирный чай</span>
+        <img src="https://art-lunch.ru/content/uploads/2018/03/ginger_tea_00-600x366.jpg" alt="" class="image_tovar">
+        <span class="description_product"></span><br>
+        <div style="text-align: right; margin-top: 50px;">
+        <button id="order_button">В заказ</button><br>
+        <button id="description_button">Подробнее о блюде</button>
+        </div>
+    </article>
+    <article>
+        <span class="title_product">Чёрный чай</span>
+        <img src="" alt="" class="image_tovar">
+        <span class="description_product"></span><br>
+        <div style="text-align: right; margin-top: 50px;">
+        <button id="order_button">В заказ</button><br>
+        <button id="description_button">Подробнее о блюде</button>
+        </div>
+    </article>
+    <article>
+        <span class="title_product">Зелёный чай</span>
+        <img src="" alt="" class="image_tovar">
+        <span class="description_product"></span><br>
+        <div style="text-align: right; margin-top: 50px;">
+        <button id="order_button">В заказ</button><br>
+        <button id="description_button">Подробнее о блюде</button>
+        </div>
+    </article>
 </main>
 
 <footer>
